Refactor agent configuration and review components to use record accessors for improved readability